--- a/src/components/drawer.css
+++ b/src/components/drawer.css
@@ -3,6 +3,7 @@
   position: fixed;
   top: 142px;
   z-index: 1200;
+  --body-padding: var(--spacing-6) var(--spacing-8);
 }
 
 #Drawer-overlay {
@@ -12,7 +13,7 @@
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 1000;
+  z-index: 1100;
   opacity: 1;
 }
 
@@ -24,4 +25,22 @@
 #Drawer-closed {
   right: -500px;
   transition: all 0.3s ease-out;
+}
+
+.Drawer-grid {
+  display: grid;
+  grid-template-columns: 1fr 250px;
+  gap: var(--spacing-4) var(--spacing-2);
+}
+
+#form-item rux-input {
+  width: 134px;
+}
+
+#form-item > rux-button::part(container) {
+  width: inherit;
+}
+
+#Drawer-slider::part(axis-label) {
+  font-size: var(--font-size-xs);
 }
