--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,6 @@
   margin: 0;
 }
 
-rux-container::part(body) {
-  padding: 0;
-}
-
 h1 {
   font-weight: var(--font-weight-regular);
   font-size: var(--font-size-4xl);
@@ -36,13 +32,37 @@ p {
 }
 
 .p-gutter-bottom {
-  margin-bottom: 0.625rem;
+  margin-bottom: var(--spacing-3);
 }
 
 .pr-3 {
-  padding-right: 0.75rem;
+  padding-right: var(--spacing-3);
+}
+
+.pl-3 {
+  padding-left: var(--spacing-3);
+}
+
+.pt-2 {
+  padding-top: var(--spacing-2);
 }
 
 .flex-grow-1 {
   flex-grow: 1;
+}
+
+.align-self-center {
+  align-self: center;
+}
+
+.flex {
+  display: flex;
+}
+
+.gap-3 {
+  gap: var(--spacing-3);
+}
+
+.disable-body-padding {
+  --body-padding: 0;
 }
