--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,7 +1,14 @@
-.Dashboard-container {
-  min-height: calc(100vh - 152px);
+.Dashboard-grid {
   display: grid;
-  grid-template-columns: 475px 1fr;
   padding: 1.25rem;
-  gap: 1.25rem;
+  height: calc(100vh - 152px);
+  max-height: 928px;
+  grid-template-columns: 475px 1fr 360px;
+  grid-template-rows: 4.125rem 1.65rem 18.5rem 1fr;
+  grid-template-areas:
+    'left-panel tab-bar tab-bar'
+    'left-panel button-bar button-bar'
+    'left-panel top-panel right-panel'
+    'left-panel bottom-panel right-panel';
+  gap: 0.625rem;
 }
