complete right panel

--- a/src/pages/dashboard/right-panel/right-panel.css
+++ b/src/pages/dashboard/right-panel/right-panel.css
@@ -1,4 +1,6 @@
 .Dashboard-right-panel {
   background-color: rgba(0, 206, 209, 0.314);
   grid-area: right-panel;
+  overflow: auto;
+  display: flex;
 }
