refactor drawer to right-panel-slide-out

--- a/src/pages/dashboard/right-panel/right-panel.css
+++ b/src/pages/dashboard/right-panel/right-panel.css
@@ -1,5 +1,8 @@
 .Dashboard-right-panel {
   grid-area: right-panel;
   overflow: auto;
-  display: flex;
+}
+
+#RightPanel-table-row:hover {
+  cursor: pointer;
 }
