--- a/src/pages/dashboard/bottom-panel/bottom-panel.css
+++ b/src/pages/dashboard/bottom-panel/bottom-panel.css
@@ -1,4 +1,8 @@
 .Dashboard-bottom-panel {
-  background-color: rgba(184, 135, 11, 0.325);
   grid-area: bottom-panel;
+  overflow: auto;
+}
+
+#BottomPanel-header-checkbox {
+  padding-left: 30px;
 }
