--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,29 @@ p {
   font-size: var(--font-size-base);
 }
 
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  padding: 0.75rem 1rem;
+  border-top: 1px solid black;
+  background-color: var(--color-background-surface-default);
+  gap: 0.75rem;
+}
+
+li:hover {
+  background-color: var(--color-background-surface-hover);
+  cursor: pointer;
+}
+
+li + .selected {
+  background-color: var(--color-background-surface-selected);
+  border-left: 4px solid var(--color-border-interactive-default);
+}
+
 .p-gutter-bottom {
   margin-bottom: var(--spacing-3);
 }
