--- a/src/pages/dashboard/left-panel/list/list.css
+++ b/src/pages/dashboard/left-panel/list/list.css
@@ -1,41 +1,4 @@
-.List-box {
+.List-ul-container {
+  height: calc(100vh - 515px);
   overflow: auto;
-  max-height: 43vh;
-}
-
-.List-box ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.List-box li {
-  padding: 0.75rem 1rem;
-  border-top: 1px solid black;
-  border-right: 1px solid black;
-}
-
-.List-item {
-  background-color: var(--color-background-surface-default);
-  display: flex;
-  gap: 0.75rem;
-}
-
-.List-item:hover {
-  background-color: var(--color-background-surface-hover);
-  cursor: pointer;
-}
-
-.List-item div {
-  flex-grow: 1;
-}
-
-.List-item-selected {
-  background-color: var(--color-background-surface-selected);
-  border-left: 4px solid var(--color-border-interactive-default);
-  display: flex;
-  gap: 0.75rem;
-}
-
-.List-item-selected div {
-  flex-grow: 1;
 }
