--- a/src/pages/dashboard/top-panel/top-panel.css
+++ b/src/pages/dashboard/top-panel/top-panel.css
@@ -1,5 +1,4 @@
 .Dashboard-top-panel {
-  background-color: rgba(100, 148, 237, 0.32);
   grid-area: top-panel;
 }
 
@@ -17,4 +16,8 @@
 
 .TopPanel-header-right > p {
   min-width: fit-content;
+}
+
+.TopPanel-charts-container {
+  height: 12rem;
 }
