--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ li + .selected {
   border-left: 4px solid var(--color-border-interactive-default);
 }
 
-.p-gutter-bottom {
+.gutter-bottom {
   margin-bottom: var(--spacing-3);
 }
 
