--- a/src/pages/dashboard/right-panel/right-slide-out/right-slide-out.css
+++ b/src/pages/dashboard/right-panel/right-slide-out/right-slide-out.css
@@ -12,9 +12,10 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
   z-index: 1100;
   opacity: 1;
+  transition: all 0.3s ease-out;
 }
 
 #RightSlideOut-open {
