--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 * {
   box-sizing: border-box;
-  margin: 0;
+  margin: var(--spacing-0);
 }
 
 h1 {
@@ -33,15 +33,15 @@ p {
 
 ul {
   list-style-type: none;
-  padding: 0;
+  padding: var(--spacing-0);
 }
 
 li {
   display: flex;
-  padding: 0.75rem 1rem;
+  padding: var(--spacing-3) var(--spacing-4);
   border-top: 1px solid black;
   background-color: var(--color-background-surface-default);
-  gap: 0.75rem;
+  gap: var(--spacing-3);
 }
 
 li:hover {
@@ -87,5 +87,5 @@ li + .selected {
 }
 
 .disable-body-padding {
-  --body-padding: 0;
+  --body-padding: var(--spacing-0);
 }
