--- a/src/pages/dashboard/left-panel/left-panel.css
+++ b/src/pages/dashboard/left-panel/left-panel.css
@@ -1,5 +1,4 @@
 .Dashboard-left-panel {
-  background-color: rgba(165, 42, 42, 0.5);
   grid-area: left-panel;
-  --body-padding: 0;
+  --body-padding: var(--spacing-0);
 }
