--- a/src/pages/dashboard/top-panel/top-panel.css
+++ b/src/pages/dashboard/top-panel/top-panel.css
@@ -22,7 +22,7 @@
 .TopPanel-charts-container {
   height: 13.25rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 330px);
   gap: 0.625rem;
   align-items: center;
   padding: var(--spacing-0) 1.25rem;
