--- a/src/components/legend/legend.css
+++ b/src/components/legend/legend.css
@@ -1,19 +1,19 @@
 .Legend-container {
   display: flex;
   flex-direction: column;
-  gap: 0.625rem;
+  gap: var(--spacing-3);
 }
 
 .Legend-item {
   display: flex;
   align-items: center;
-  gap: 0.625rem;
+  gap: var(--spacing-3);
 }
 
 .Legend-box {
-  width: 1.25rem;
-  height: 1.25rem;
-  border-radius: var(--spacing-050);
+  width: var(--spacing-6);
+  height: var(--spacing-6);
+  border-radius: var(--radius-base);
 }
 
 #Legend-charlie {
