--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,6 +1,6 @@
 .Dashboard-grid {
   display: grid;
-  padding: 1.25rem;
+  padding: var(--spacing-6) var(--spacing-6) var(--spacing-3);
   height: calc(100vh - 152px);
   grid-template-columns: 475px 1fr 360px;
   grid-template-rows: 4.125rem 1.65rem 18.5rem 1fr;
@@ -9,5 +9,5 @@
     'left-panel button-bar button-bar'
     'left-panel top-panel right-panel'
     'left-panel bottom-panel right-panel';
-  gap: 0.625rem;
+  gap: var(--spacing-3);
 }
