--- a/src/pages/dashboard/left-panel/toolbar/toolbar.css
+++ b/src/pages/dashboard/left-panel/toolbar/toolbar.css
@@ -1,10 +1,10 @@
 .Toolbar-grid {
   display: grid;
   grid-template-columns: 30% 1fr 1fr;
-  gap: 0.5rem;
+  gap: var(--spacing-2);
 }
 
 .Toolbar-box {
   text-align: center;
-  padding-right: 2.25rem;
+  padding-right: var(--spacing-10);
 }
