--- a/src/pages/dashboard/top-panel/doughnut-chart/doughnut-chart.css
+++ b/src/pages/dashboard/top-panel/doughnut-chart/doughnut-chart.css
@@ -5,6 +5,6 @@
   align-items: center;
   width: 100%;
   top: calc(50% - var(--spacing-6));
-  height: --spacing-12;
+  height: var(--spacing-12);
   justify-content: center;
 }
