--- a/src/pages/dashboard/left-panel/list/list.css
+++ b/src/pages/dashboard/left-panel/list/list.css
@@ -1,4 +1,9 @@
-.List-ul-container {
+.List-wrapper {
   height: calc(100vh - 513px);
   overflow: auto;
+}
+
+.List-item-wrapper {
+  display: flex;
+  gap: var(--spacing-3);
 }
