--- a/src/common/rux-list-item/rux-list-item.css
+++ b/src/common/rux-list-item/rux-list-item.css
@@ -9,7 +9,7 @@
   cursor: pointer;
 }
 
-.rux-list-item + .selected {
+.rux-list-item.selected {
   background-color: var(--color-background-surface-selected);
   border-left: 4px solid var(--color-border-interactive-default);
 }
